fix alignment for paragraph content

--- a/src/pages/company-page/company-page.scss
+++ b/src/pages/company-page/company-page.scss
@@ -145,6 +145,7 @@
     margin-left: 30px;
     margin-right: 30px;
     max-width: 500px;
+    width: 100%;
   }
 }
 
